# p-salt

./: .env.example  .gitignore  README.md  gitpush.sh  prepare_kinetics700_subset.py  pyproject.toml  requirements.txt  submit.sbatch  submit_extract_stage0.sbatch  submit_extract_stage0_full.sbatch  submit_extract_then_teacher.sh  submit_probe_teacher_extracted.sbatch  submit_student_stage2_extracted.sbatch  submit_teacher_stage1_extracted.sbatch  test_architectures.py  train_student.py  train_teacher.py
app/: __init__.py  main.py  scaffold.py
configs/: eval_probe_student_vit_base_from_tiny_teacher_imagenet_repeated_frames.yaml  eval_probe_student_vit_large_from_tiny_teacher_imagenet_repeated_frames.yaml  extract_kinetics400_local_full_sqf.yaml  extract_kinetics400_local_sqf.yaml  linear_probe_student_vit_base_from_tiny_teacher_imagenet_related.yaml  linear_probe_student_vit_small_dinov2_vits14_imagenet_related.yaml  prepare_imagenet_probe_subset.yaml  probe_student_vit_base_from_tiny_teacher_imagenet_repeated_frames.yaml  probe_student_vit_h_from_tiny_teacher_imagenet_repeated_frames.yaml  probe_student_vit_large_from_tiny_teacher_imagenet_repeated_frames.yaml  probe_teacher_kinetics400_local_extracted.yaml  student.yaml  student_kinetics400_local_extracted.yaml  student_kinetics400_local_full.yaml  student_kinetics400_local_sqf.yaml  student_kinetics700_hf.yaml  student_kinetics700_subset.yaml  student_v36m_mixture.yaml  student_vit_base.yaml  student_vit_base_from_tiny_teacher_kinetics700_5class_10pct_random.yaml  teacher.yaml  teacher_kinetics400_local_extracted.yaml  (+11 more)
(+84 files in other folders)
